Fix errors with the embedding clients